    - only displays info on the installed version; else, the latest available;
      apt-get showed all available versions
    - the trade-off is that the command is a bit slower, but what's the rush :)
  * LIST-RECOMMENDED: new command that displays packages which are
    auto-installed via Recommends, and are without installed dependencies.
    (Closes: #482147)
  * NEWS: new command that displays package NEWS file(s).
  * INSTALL: accept -y|--yes option, an alias for apt-get's --assume-yes.
  * UPGRADE: accept -y|--yes option, too.
  * FIX-INSTALL: accept -n|--noauth option.
  * FIX-MISSING: accept -n|--noauth option.
  * Remove supression of error messages; Not a good idea.
  * Add dependency on aptitude; It must have been forgotten.
  * Cleanse packaging, drastically :-)
  * Stop using python-support; There was no need for it.


 -- Graham Williams <Graham.Williams@togaware.com>  Wed, 16 Sep 2010 17:22:16 +1000

wajig (2.0.49) unstable; urgency=low

  [ Tshepang Lekhonkhobe ]

  * UPGRADE: Don't automatically do an "apt-get update" with the backup
    option; the behaviour is not standard, and is not so-damn-fast.

  * UPGRADE: Add command line argument for --backup to specify target
    directory.  * Used to be "wajig --backup upgrade BKDIR".  * Now it's
    "wajig --backup=BKDIR upgrade".

  * UPGRADE: Proceed to upgrade after using -b|--backup option.

  * UPGRADE: Remove the option to install listed packages. This helps
    reduce code complexity.

  * CHANGELOG: Now only displays uninstalled entries by default. This
    makes the hacky NEWS command redundant, which is therefore
    removed. (Closes: #424668).

  * CHANGELOG: Add -v|--verbose=1 option to display the whole thing. This
    was the default option, but suggestion offered in #424668 is more
    sane.

  * CHANGELOG: Add -x|--pager option to allow scrolling. This also implies
    -v|--verbose=1 (see above).

  * DIST-UPGRADE: Add -b|--backup=BKDIR option to allow backing up of